tests/rosetta/out/Elixir/DNS-query.error
run: exit status 1
    error: undefined variable "net"
    │
  5 │     res = net.lookup_host("www.kame.net")
    │           ^^^
    │
    └─ /tmp/DNS-query.exs:5:11: Main.main/0

    error: undefined variable "nil_"
    │
 11 │     if err == nil_ do
    │               ^^^^
    │
    └─ /tmp/DNS-query.exs:11:15: Main.main/0

** (CompileError) /tmp/DNS-query.exs: cannot compile module Main (errors have been logged)

